--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -6,7 +6,7 @@ $bfg-header-height: 2rem !default;
 
 $bfg-fill: (
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075),
-  border-radius: 2px,
+  border-radius: 3px,
   border-width: 1px,
   header-border: #d5d5d5,
   header-bg: #f6f6f6,
@@ -168,11 +168,7 @@ $bfg-breakpoints: (
 .bfg__header {
   padding: 0 $bfg-padding;
   box-sizing: border-box;
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  right: 0;
+  position: relative;
   overflow: hidden;
   height: $bfg-header-height;
   line-height: $bfg-header-height;
@@ -181,16 +177,10 @@ $bfg-breakpoints: (
   text-overflow: ellipsis;
 }
 
-.bfg--gap .bfg__header {
-  left: ($bfg-gap / 2);
-  right: ($bfg-gap / 2);
-}
-
 .bfg__content {
   padding: $bfg-padding;
   box-sizing: border-box;
   position: relative;
-  z-index: 1;
   overflow: auto;
   width: 100%;
   height: 100%;
@@ -200,14 +190,11 @@ $bfg-breakpoints: (
   padding: 0;
 }
 
-.bfg__header {
-  + .bfg__content {
-    padding-top: ($bfg-header-height + $bfg-padding);
-  }
-
-  + .bfg__content--nopad {
-    padding-top: $bfg-header-height;
-  }
+.bfg__header + .bfg__content {
+  height: calc(100% - #{$bfg-header-height});
+  border-top: none;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .bfg--overflow .bfg__box,
@@ -219,6 +206,7 @@ $bfg-breakpoints: (
 
 @mixin bfg-filler($name, $fill) {
   .bfg__header--#{$name} {
+    box-shadow: map-get($fill, box-shadow);
     border-radius: map-get($fill, border-radius) map-get($fill, border-radius) 0 0;
     border: map-get($fill, border-width) solid map-get($fill, header-border);
     background-color: map-get($fill, header-bg);
