--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -20,6 +20,8 @@ $bfg-fill-default: (
   content-forground: false
 ) !default;
 
+$bfg-fill-default-included: true;
+
 $bfg-breakpoints: (
   xs: 576px,
   sm: 768px,
@@ -253,4 +255,6 @@ $bfg-breakpoints: (
   }
 }
 
-@include bfg-filler(default, $bfg-fill-default);
+@if $bfg-fill-default-included {
+  @include bfg-filler(default, $bfg-fill-default);
+}
