Improve IE11 support

--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -81,6 +81,11 @@ $bfg-breakpoints: (
   box-sizing: border-box;
 }
 
+@if $ie11-support {
+  .bfg--row > .bfg__box { max-width: 100%; }
+  .bfg--col > .bfg__box { max-height: 100%; }
+}
+
 .bfg__box--fixed {
   flex: 0 0 auto;
 }
