--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -43,6 +43,8 @@ $bfg-breakpoints: (
 
 .bfg {
   display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
   height: 100%; // Try to fit the parent node height when available
 
   .bfg {
@@ -74,15 +76,16 @@ $bfg-breakpoints: (
   flex-wrap: wrap;
 }
 
-.bfg--justify-start    { justify-content: flex-start;    }
-.bfg--justify-center   { justify-content: center;        }
-.bfg--justify-end      { justify-content: flex-end;      }
-.bfg--justify-between  { justify-content: space-between; }
-.bfg--justify-around   { justify-content: space-around;  }
+// Justify content along the "main" axis
+.bfg--main-center   { justify-content: center;        }
+.bfg--main-end      { justify-content: flex-end;      }
+.bfg--main-between  { justify-content: space-between; }
+.bfg--main-around   { justify-content: space-around;  }
 
-.bfg--align-start   { align-items: flex-start; }
-.bfg--align-center  { align-items: center;     }
-.bfg--align-end     { align-items: flex-end;   }
+// Align items along the "cross" axis
+.bfg--cross-start   { align-items: flex-start; }
+.bfg--cross-center  { align-items: center;     }
+.bfg--cross-end     { align-items: flex-end;   }
 
 .bfg__box {
   flex: 0 1 100%;
