--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -6,7 +6,7 @@ $bfg-padding: 0.5rem !default;
 
 $bfg-header-height: 2rem !default;
 
-$bfg-fill-default: (
+$bfg-theme-default: (
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075),
   border-radius: 3px,
   border-width: 1px,
@@ -20,7 +20,7 @@ $bfg-fill-default: (
   content-forground: false
 ) !default;
 
-$bfg-fill-default-included: true;
+$bfg-theme-default-included: true;
 
 $bfg-breakpoints: (
   xs: 576px,
@@ -243,36 +243,36 @@ $bfg-breakpoints: (
   overflow: visible;
 }
 
-@mixin bfg-filler($name, $fill) {
-  $fill: map-merge($bfg-fill-default, $fill);
+@mixin bfg-theme($name, $settings) {
+  $s: map-merge($bfg-theme-default, $settings);
 
   .bfg__action--#{$name},
   .bfg__header--#{$name} {
-    box-shadow: map-get($fill, box-shadow);
-    border: map-get($fill, border-width) solid map-get($fill, header-border);
-    background-color: map-get($fill, header-background);
-    @if map-get($fill, header-forground) { color: map-get($fill, header-forground); }
-    line-height: calc(#{$bfg-header-height} - #{2 * map-get($fill, border-width)});
+    box-shadow: map-get($s, box-shadow);
+    border: map-get($s, border-width) solid map-get($s, header-border);
+    background-color: map-get($s, header-background);
+    @if map-get($s, header-forground) { color: map-get($s, header-forground); }
+    line-height: calc(#{$bfg-header-height} - #{2 * map-get($s, border-width)});
   }
 
   .bfg__action--#{$name} {
-    border-top-right-radius: map-get($fill, border-radius);
+    border-top-right-radius: map-get($s, border-radius);
     border-left-width: 0;
   }
 
   .bfg__header--#{$name} {
-    border-radius: map-get($fill, border-radius) map-get($fill, border-radius) 0 0;
+    border-radius: map-get($s, border-radius) map-get($s, border-radius) 0 0;
   }
 
   .bfg__content--#{$name} {
-    box-shadow: map-get($fill, box-shadow);
-    border-radius: map-get($fill, border-radius);
-    border: map-get($fill, border-width) solid map-get($fill, content-border);
-    background-color: map-get($fill, content-background);
-    @if map-get($fill, content-forground) { color: map-get($fill, content-forground); }
+    box-shadow: map-get($s, box-shadow);
+    border-radius: map-get($s, border-radius);
+    border: map-get($s, border-width) solid map-get($s, content-border);
+    background-color: map-get($s, content-background);
+    @if map-get($s, content-forground) { color: map-get($s, content-forground); }
   }
 }
 
-@if $bfg-fill-default-included {
-  @include bfg-filler(default, $bfg-fill-default);
+@if $bfg-theme-default-included {
+  @include bfg-theme(default, $bfg-theme-default);
 }
