Rename `--default` into `--light`

--- a/src/demos/showcase/21.scss
+++ b/src/demos/showcase/21.scss
@@ -2,7 +2,7 @@
 
 @import "../../bem-flex-grid.ie11";
 
-// ===== Add customized fillers =====
+// ===== Add customized themes =====
 
 @include bfg-theme(info, (
   //box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075), // Omit to use default value
