--- a/src/bem-flex-grid.scss
+++ b/src/bem-flex-grid.scss
@@ -6,7 +6,7 @@ $bfg-padding: 0.5rem !default;
 
 $bfg-header-height: 2rem !default;
 
-$bfg-theme-default: (
+$bfg-theme-light: (
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075),
   border-radius: 3px,
   border-width: 1px,
@@ -20,7 +20,7 @@ $bfg-theme-default: (
   content-forground: false
 ) !default;
 
-$bfg-theme-default-included: true;
+$bfg-theme-light-included: true;
 
 $bfg-breakpoints: (
   xs: 576px,
@@ -53,7 +53,7 @@ $bfg-breakpoints: (
 }
 
 .bfg--row {
-  flex-direction: row;
+  flex-direction: row; // TODO: make this the default behavior and remove the selector...
 }
 
 .bfg--col {
@@ -244,7 +244,7 @@ $bfg-breakpoints: (
 }
 
 @mixin bfg-theme($name, $settings) {
-  $s: map-merge($bfg-theme-default, $settings);
+  $s: map-merge($bfg-theme-light, $settings);
 
   .bfg__action--#{$name},
   .bfg__header--#{$name} {
@@ -273,6 +273,6 @@ $bfg-breakpoints: (
   }
 }
 
-@if $bfg-theme-default-included {
-  @include bfg-theme(default, $bfg-theme-default);
+@if $bfg-theme-light-included {
+  @include bfg-theme(light, $bfg-theme-light);
 }
