New branding (in progress...)

--- a/src/demos/index.scss
+++ b/src/demos/index.scss
@@ -1,6 +1,6 @@
 @import "./variables.scss";
 
-html {
+/*html {
   background-color: map-get($demo-light, background);
   color: map-get($demo-light, forground);
 }
@@ -22,7 +22,7 @@ p {
 
 a {
   color: map-get($demo-light, forground);
-}
+}*/
 
 /* ===== Showcase logo ===== */
 
