--- a/src/demos/showcase/21.scss
+++ b/src/demos/showcase/21.scss
@@ -1,6 +1,6 @@
 // ===== Import grid system =====
 
-@import "../../bem-flex-grid.ie11";
+@import "../../lib/bem-flex-grid.ie11";
 
 // ===== Add customized themes =====
 
