--- a/src/demos/index.scss
+++ b/src/demos/index.scss
@@ -17,7 +17,7 @@ header, footer {
 }
 
 p {
-  text-align: center;
+  //text-align: center;
 }
 
 a {
@@ -111,12 +111,14 @@ $demo-logo-shadow: ($demo-logo-border / 2);
 .demo-showcase__iframe {
   display: block;
   width: 100%;
-  height: 45vh;
+  height: 75vh;
   border: none;
   background-color: white;
 }
 
 .demo-showcase__link {
+  display: none;
+
   position: absolute;
   top: -0.5rem;
   left: -0.5rem;
