--- a/src/demos/www.scss
+++ b/src/demos/www.scss
@@ -55,7 +55,13 @@ $www-max-width: 1280px;
   right: 0;
   text-align: right;
 
+  .www-container {
+    margin: 0;
+    max-width: ($www-max-width / 2);
+  }
+
   .www-navbar__link {
+    padding: 0.25rem 0.75rem;
     border-radius: 3px;
     background-color: rgba(0, 0, 0, 0.35);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.35) inset;
@@ -63,11 +69,9 @@ $www-max-width: 1280px;
 }
 
 .www-navbar__link {
-  padding: 0.25rem 0.75rem;
   color: white; // Must be white!
   text-decoration: none;
 }
-
 
 /* ===== Header ===== */
 
