Improve documentation (add prismJs 'scss' and 'bash' support)

--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -18,6 +18,10 @@ html, body {
   height: 100%;
 }
 
+code {
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+}
+
 /* ===== Change html background color ===== */
 
 .demo-page-bg--gray {
