Replace `--fixed` with `--fit`

--- a/src/lib/bem-flex-grid.scss
+++ b/src/lib/bem-flex-grid.scss
@@ -133,7 +133,7 @@ $bfg-breakpoints: (
   .bfg--col > .bfg__box { max-height: 100%; }
 }
 
-.bfg__box--fixed {
+.bfg__box--fit {
   flex: 0 0 auto;
 }
 
