Improve README and logo animation

--- a/src/demos/www.scss
+++ b/src/demos/www.scss
@@ -128,14 +128,30 @@ $www-logo-shadow: ($www-logo-border / 2);
   transform-origin: 50% 50%;
   animation-duration: 5s;
   animation-iteration-count: infinite;
+  //animation-direction: alternate;
   animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   animation-name: wwwLogoAnim;
 }
 
-.www-logo__square--1 { border-color: #F44336; left: 0; top: 0; }
-.www-logo__square--2 { border-color: #C62828; left: 0; bottom: 0; }
-.www-logo__square--3 { border-color: #2196F3; right: 0; top: 0; }
-.www-logo__square--4 { border-color: #1565C0; right: 0; bottom: 0; }
+.www-logo__square--1 { border-color: #F44336; left: 0; top: 0; animation-name: wwwLogoAnim, wwwLogoAnim1; }
+.www-logo__square--2 { border-color: #C62828; left: 0; bottom: 0; animation-name: wwwLogoAnim, wwwLogoAnim2; }
+.www-logo__square--3 { border-color: #2196F3; right: 0; top: 0; animation-name: wwwLogoAnim, wwwLogoAnim3; }
+.www-logo__square--4 { border-color: #1565C0; right: 0; bottom: 0; animation-name: wwwLogoAnim, wwwLogoAnim4; }
+
+/*@keyframes wwwLogoAnim1 { 70% { top: 0; } 85% { top: 50%; } 100% { top: 0; } }
+@keyframes wwwLogoAnim2 { 70% { left: 0; } 85% { left: 50%; } 100% { left: 0; } }
+@keyframes wwwLogoAnim3 { 70% { right: 0; } 85% { right: 50%; } 100% { right: 0; } }
+@keyframes wwwLogoAnim4 { 70% { bottom: 0; } 85% { bottom: 50%; } 100% { bottom: 0; } }*/
+
+/*@keyframes wwwLogoAnim1 { 70% { left: 0; } 85% { left: 50%; } 100% { left: 0; } }
+@keyframes wwwLogoAnim2 { 70% { bottom: 0; } 85% { bottom: 50%; } 100% { bottom: 0; } }
+@keyframes wwwLogoAnim3 { 70% { top: 0; } 85% { top: 50%; } 100% { top: 0; } }
+@keyframes wwwLogoAnim4 { 70% { right: 0; } 85% { right: 50%; } 100% { right: 0; } }*/
+
+@keyframes wwwLogoAnim1 { 70% { left: 0; top: 0; } 85% { left: 50%; top: 50%; } 100% { left: 0; top: 0; } }
+@keyframes wwwLogoAnim2 { 70% { bottom: 0; left: 0; } 85% { bottom: 50%; left: 50%; } 100% { bottom: 0; left: 0; } }
+@keyframes wwwLogoAnim3 { 70% { top: 0; right: 0; } 85% { top: 50%; right: 50%; } 100% { top: 0; right: 0; } }
+@keyframes wwwLogoAnim4 { 70% { right: 0;bottom: 0; } 85% { right: 50%; bottom: 50% } 100% { right: 0; bottom: 0; } }
 
 @keyframes wwwLogoAnim {
   0% {
@@ -151,6 +167,18 @@ $www-logo-shadow: ($www-logo-border / 2);
       $www-logo-shadow $www-logo-shadow 1px rgba(0, 0, 0, 0.2) inset;
   }
   85% {
+    //border-radius: 33%;
+    transform: rotate(-90deg) scale(0.5);
+  }
+  100% {
+    border-radius: 0;
+    transform: rotate(0deg);
+    box-shadow:
+      $www-logo-shadow (-$www-logo-shadow) 1px rgba(0, 0, 0, 0.2),
+      $www-logo-shadow (-$www-logo-shadow) 1px rgba(0, 0, 0, 0.2) inset;
+  }
+  /*
+  85% {
     border-radius: 33%;
     transform: rotate(45deg) scale(1.35);
   }
@@ -161,6 +189,7 @@ $www-logo-shadow: ($www-logo-border / 2);
       $www-logo-shadow (-$www-logo-shadow) 1px rgba(0, 0, 0, 0.2),
       $www-logo-shadow (-$www-logo-shadow) 1px rgba(0, 0, 0, 0.2) inset;
   }
+  */
 }
 
 /* ===== Showcase ===== */
