--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -2,6 +2,8 @@
 
 @import "./variables.scss";
 
+/* ===== base ===== */
+
 html,
 .markdown-body { // Overwrite default "primer-markdown"
   color: #424242;
@@ -12,12 +14,12 @@ html,
 
 body {
   margin: 0;
-  box-sizing: border-box;
+  //box-sizing: border-box;
 }
 
-html, body {
+/*html, body {
   height: 100%;
-}
+}*/
 
 code {
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
@@ -61,7 +63,7 @@ code {
 .demo-source__code {
   overflow-x: auto;
   margin: 0;
-  padding: 2rem;
+  //padding: 2rem;
   line-height: 1.2rem;
 }
 
@@ -169,13 +171,50 @@ code {
   background: white;
 }
 
-.area {
+
+//////
+
+.final__info {
   position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 50%;
+  overflow: auto;
   box-sizing: border-box;
+  //padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.final__desc {
+  padding: 1rem;
+  flex-shrink: 0;
+}
+
+.final__code {
+  flex-shrink: 1;
+  flex-grow: 1;
+  overflow: auto;
+  min-height: 200px;
+  max-height: 100%;
+  box-sizing: border-box;
+  border-top: 2px solid #ddd;
+  background: #f5f5f5;
+  padding: 1rem;
+}
+
+.final__code pre {
+  margin: 0;
+}
+
+.final__demo {
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
-  left: 50%;
-  padding: 1rem;
+  width: 50%;
   overflow: auto;
+  box-sizing: border-box;
+  border-left: 2px solid #ddd;
 }
