--- a/src/demos/www.scss
+++ b/src/demos/www.scss
@@ -1,5 +1,7 @@
 @import "./variables.scss";
 
+/* ===== base ===== */
+
 body {
   padding: 0;
 }
@@ -16,20 +18,14 @@ main {
   display: block; // For IE11
 }
 
-$www-navbar: (
-  border: #1565C0,
-  background: #2196F3,
-  forground: #FFF // #E3F2FD
-);
+/* ===== Container ===== */
 
-$www-header: (
-  padding: 6rem,
-  border: #E0E0E0,
-  background: #F5F5F5,
-  forground: #9E9E9E
-);
-
-$www-max-width: 992px;
+.www-container {
+  margin: 0 auto;
+  box-sizing: border-box;
+  max-width: $www-max-width;
+  padding: 0 1rem;
+}
 
 /* ===== Navbar ===== */
 
@@ -82,7 +78,6 @@ $www-max-width: 992px;
 .www-header {
   position: relative;
   z-index: 2;
-  margin-bottom: 3rem;
   padding: map-get($www-header, padding) 0 (map-get($www-header, padding) / 2) 0;
   background-color: map-get($www-header, background);
   border-bottom: 1px solid map-get($www-header, border);
@@ -114,18 +109,54 @@ h2.www-header__subtitle { // Add "h2" selector to overwrite "primer-markdown".
   color: map-get($www-header, forground);
 }
 
-/* ===== Container ===== */
+/* ===== Showcase ===== */
 
-.www-container {
-  margin: 0 auto;
-  box-sizing: border-box;
-  max-width: $www-max-width;
-  padding: 0 1rem;
+#www-showcase {
+  margin: $www-showcase-margin 0;
+}
+
+.www-showcase__item {
+  position: relative;
+  border: 2px solid #ddd;
+  margin-bottom: $www-showcase-margin;
+}
+
+.www-showcase__iframe {
+  display: block;
+  width: 100%;
+  height: 70vh;
+  border: none;
+}
+
+.www-showcase__link {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  //z-index: 1;
+  width: 2rem;
+  height: 2rem;
+  line-height: 2rem;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  border: 1px solid map-get($demo-variant, border);
+  background-color: map-get($demo-variant, background);
+  color: map-get($demo-variant, forground) !important;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
+  text-align: center;
+  text-decoration: none;
+  opacity: 0.5;
+  transition: background-color ease 300ms, color ease 300ms, opacity ease 300ms;
+
+  &:hover {
+    background-color: map-get($demo-variant, border);
+    color: #ddd;
+    opacity: 1;
+  }
 }
 
 /* ===== Logo ===== */
 
-$www-logo-size: 6rem;
+$www-logo-size: 4rem;
 $www-logo-border: ($www-logo-size / 12);
 $www-logo-shadow: ($www-logo-border / 2);
 
@@ -203,58 +234,4 @@ $www-logo-shadow: ($www-logo-border / 2);
       $www-logo-shadow (-$www-logo-shadow) 1px rgba(0, 0, 0, 0.2),
       $www-logo-shadow (-$www-logo-shadow) 1px rgba(0, 0, 0, 0.2) inset;
   }*/
-}
-
-/* ===== Showcase ===== */
-
-.www-avine__item {
-  position: relative;
-  //box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.075);
-  //border: 1px solid map-get($demo-light, border);
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid #ddd;
-}
-
-/////////////////////////
-
-.www-showcase__item {
-  position: relative;
-  box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.075);
-  border: 1px solid map-get($demo-light, border);
-  background-color: white;
-}
-
-.www-showcase__iframe {
-  display: block;
-  width: 100%;
-  height: 70vh;
-  border: none;
-  background-color: white;
-}
-
-.www-showcase__link {
-  //display: none;
-
-  position: absolute;
-  top: -0.5rem;
-  right: -0.5rem;
-  z-index: 10;
-  width: 2rem;
-  height: 2rem;
-  line-height: 2rem;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
-  border: 1px solid map-get($demo-variant, border);
-  background-color: map-get($demo-variant, background);
-  color: map-get($demo-variant, forground) !important;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
-  text-align: center;
-  text-decoration: none;
-  transition: background-color ease 300ms, color ease 300ms;
-
-  &:hover {
-    background-color: map-get($demo-variant, border);
-    color: #ddd;
-  }
 }
