--- a/src/demos/www.scss
+++ b/src/demos/www.scss
@@ -7,11 +7,11 @@ body {
 }
 
 html, body {
-  height: auto;
+  height: auto; // FIXME: DEPRECATED ?
 }
 
 a {
-  color: #2196F3; // map-get($demo-light, forground);
+  color: $www-link;
 }
 
 main {
@@ -42,7 +42,7 @@ main {
 }
 
 .www-navbar--back {
-  z-index: 1;
+  z-index: 10;
   border-color: map-get($www-navbar, border);
   background: map-get($www-navbar, background);
   text-align: left;
@@ -50,7 +50,7 @@ main {
 }
 
 .www-navbar--front {
-  z-index: 3;
+  z-index: 13;
   width: 50%;
   right: 0;
   text-align: right;
@@ -77,7 +77,8 @@ main {
 
 .www-header {
   position: relative;
-  z-index: 2;
+  z-index: 12;
+  margin-bottom: $www-showcase-margin;
   padding: map-get($www-header, padding) 0 (map-get($www-header, padding) / 2) 0;
   background-color: map-get($www-header, background);
   border-bottom: 1px solid map-get($www-header, border);
@@ -109,56 +110,7 @@ h2.www-header__subtitle { // Add "h2" selector to overwrite "primer-markdown".
   color: map-get($www-header, forground);
 }
 
-/* ===== Showcase ===== */
-
-#www-showcase {
-  margin: $www-showcase-margin 0;
-}
-
-.www-showcase__item {
-  position: relative;
-  border: 2px solid #ddd;
-  margin-bottom: $www-showcase-margin;
-}
-
-.www-showcase__iframe {
-  display: block;
-  width: 100%;
-  height: 70vh;
-  border: none;
-}
-
-.www-showcase__link {
-  position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
-  //z-index: 1;
-  width: 2rem;
-  height: 2rem;
-  line-height: 2rem;
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
-  border: 1px solid map-get($demo-variant, border);
-  background-color: map-get($demo-variant, background);
-  color: map-get($demo-variant, forground) !important;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
-  text-align: center;
-  text-decoration: none;
-  opacity: 0.5;
-  transition: background-color ease 300ms, color ease 300ms, opacity ease 300ms;
-
-  &:hover {
-    background-color: map-get($demo-variant, border);
-    color: #ddd;
-    opacity: 1;
-  }
-}
-
 /* ===== Logo ===== */
-
-$www-logo-size: 4rem;
-$www-logo-border: ($www-logo-size / 12);
-$www-logo-shadow: ($www-logo-border / 2);
 
 .www-logo {
   position: relative;
@@ -234,4 +186,45 @@ $www-logo-shadow: ($www-logo-border / 2);
       $www-logo-shadow (-$www-logo-shadow) 1px rgba(0, 0, 0, 0.2),
       $www-logo-shadow (-$www-logo-shadow) 1px rgba(0, 0, 0, 0.2) inset;
   }*/
+}
+
+/* ===== Showcase ===== */
+
+.www-showcase__item {
+  position: relative;
+  border: $www-showcase-border;
+  margin-bottom: $www-showcase-margin;
+}
+
+.www-showcase__iframe {
+  display: block;
+  width: 100%;
+  height: 70vh;
+  border: none;
+}
+
+.www-showcase__link {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  z-index: 9;
+  width: 2rem;
+  height: 2rem;
+  line-height: 2rem;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  border: 1px solid map-get($demo-variant, border);
+  background-color: map-get($demo-variant, background);
+  color: map-get($demo-variant, forground) !important;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.2);
+  text-align: center;
+  text-decoration: none;
+  opacity: 0.5;
+  transition: background-color ease 300ms, color ease 300ms, opacity ease 300ms;
+
+  &:hover {
+    background-color: map-get($demo-variant, border);
+    color: #ddd;
+    opacity: 1;
+  }
 }
