--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -2,7 +2,7 @@
 
 @import "./variables.scss";
 
-/* ===== base ===== */
+/* ===== Base ===== */
 
 html,
 .markdown-body { // Overwrite default "primer-markdown"
@@ -21,6 +21,10 @@ html, body {
   height: 100%; // FIXME: DEPRECATED ?
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  margin: 1rem 0;
+}
+
 code {
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
   font-size: 0.85rem;
@@ -37,7 +41,7 @@ code {
 
 .demo-full-screen--disabled { // Add to the <html> tag
   &, body {
-    height: auto;
+    height: auto; // FIXME: DEPRECATED ?
   }
 }
 
@@ -45,10 +49,60 @@ code {
   @include demo-dark-button(right);
 }
 
-/* ===== Handle source ===== */
+/* ===== Handle layout ===== */
 
+.demo-layout__desc {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 50%;
+  overflow: auto;
+  box-sizing: border-box;
+  //padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
 
-/* ===== Handle container and text ===== */
+.demo-layout__readme {
+  padding: 1rem;
+  flex-shrink: 0;
+  background: white;
+}
+
+.demo-layout__code {
+  flex-shrink: 1;
+  flex-grow: 1;
+  overflow: auto;
+  min-height: 200px;
+  max-height: 100%;
+  box-sizing: border-box;
+  border-top: $www-showcase-border;
+  background: #f6f8fa;
+  padding: 1rem;
+
+  overflow-x: auto;
+  margin: 0;
+  line-height: 1.2rem;
+}
+
+.demo-layout__output {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 50%;
+  overflow: auto;
+  box-sizing: border-box;
+  border-left: $www-showcase-border;
+}
+
+.demo-layout__warn {
+  color: map-get($demo-variant, background);
+  font-size: 0.875rem;
+}
+
+/* ===== Handle dummy container and text ===== */
 
 .demo-container {
   cursor: pointer;
@@ -87,60 +141,3 @@ code {
 .demo-text__bg-3 { background-color: #E8F5E9; }
 .demo-text__bg-4 { background-color: #FFEBEE; }
 .demo-text__bg-5 { background-color: #F3E5F5; }
-
-//////
-
-.final__info {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 50%;
-  overflow: auto;
-  box-sizing: border-box;
-  //padding: 1rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.final__desc {
-  padding: 1rem;
-  flex-shrink: 0;
-  background: white;
-}
-
-.final__code {
-  flex-shrink: 1;
-  flex-grow: 1;
-  overflow: auto;
-  min-height: 200px;
-  max-height: 100%;
-  box-sizing: border-box;
-  border-top: $www-showcase-border;
-  background: #f6f8fa;
-  padding: 1rem;
-
-  overflow-x: auto;
-  margin: 0;
-  line-height: 1.2rem;
-}
-
-.final__code pre {
-  margin: 0;
-}
-
-.final__demo {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 50%;
-  overflow: auto;
-  box-sizing: border-box;
-  border-left: $www-showcase-border;
-}
-
-.final__warning {
-  color: map-get($demo-variant, background);
-  font-size: 0.875rem;
-}
