--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -66,13 +66,21 @@ code {
 
 .demo-layout__readme {
   padding: 1rem;
+  flex-grow: 1;
   flex-shrink: 0;
   background: white;
+
+  code {
+    padding: 0.1em 0.3em;
+    border-radius: $www-border-radius;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    background-color: rgba(0, 0, 0, 0.05);
+  }
 }
 
 .demo-layout__code {
-  flex-shrink: 1;
   flex-grow: 1;
+  flex-shrink: 1;
   overflow: auto;
   min-height: 200px;
   max-height: 100%;
