--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300|Cutive+Mono');
 
 @import "./variables.scss";
 
@@ -26,7 +26,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 code {
-  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-family: 'Cutive Mono', monospace !important; // Overwrite "prism JS"
   font-size: 0.85rem;
   line-height: 0.85rem;
 }
@@ -88,7 +88,7 @@ code {
   border-top: $www-showcase-border;
   background: #f6f8fa;
   padding: 1rem;
-
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.033) inset;
   overflow-x: auto;
   margin: 0;
   line-height: 1.2rem;
@@ -103,6 +103,7 @@ code {
   overflow: auto;
   box-sizing: border-box;
   border-left: $www-showcase-border;
+  padding: $www-border-radius;
 }
 
 .demo-layout__warn {
