Improve $www-showcase variables

--- a/src/demos/variables.scss
+++ b/src/demos/variables.scss
@@ -20,8 +20,11 @@ $www-logo-size: 6rem;
 $www-logo-border: ($www-logo-size / 12);
 $www-logo-shadow: ($www-logo-border / 2);
 
-$www-showcase-margin: 3rem;
-$www-showcase-border: 1px solid map-get($www-header, border);
+$www-showcase: (
+  margin: 3rem,
+  border-width: 1px,
+  border-color: map-get($www-header, border),
+);
 
 $www-border-radius: 3px;
 
