--- a/src/demos/demo.scss
+++ b/src/demos/demo.scss
@@ -85,7 +85,7 @@ code {
   min-height: 200px;
   max-height: 100%;
   box-sizing: border-box;
-  border-top: $www-showcase-border;
+  border-top: map-get($www-showcase, border-width) solid map-get($www-showcase, border-color);
   background: #f6f8fa;
   padding: 1rem;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.033) inset;
@@ -102,7 +102,7 @@ code {
   width: 50%;
   overflow: auto;
   box-sizing: border-box;
-  border-left: $www-showcase-border;
+  border-left: map-get($www-showcase, border-width) solid map-get($www-showcase, border-color);
   padding: $www-border-radius;
 }
 
