--- a/src/demo/22.scss
+++ b/src/demo/22.scss
@@ -1,6 +1,6 @@
 // ===== Import grid system =====
 
-@import "../../lib/bem-flex-grid.ie11";
+@import "../lib/bem-flex-grid.ie11";
 
 // ===== Add customized themes =====
 
